--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=httpdorisjewelry.github.io/wp-admin/privacy-policy-2/">
+		<meta http-equiv="refresh" content="0;url=http/privacy-policy-2/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "httpdorisjewelry.github.io/wp-admin/privacy-policy-2/";
+			window.location = "http/privacy-policy-2/";
 		</script>
 
-		<p>You are being redirected to <a href="httpdorisjewelry.github.io/wp-admin/privacy-policy-2/">httpdorisjewelry.github.io/wp-admin/privacy-policy-2/</a></p>
+		<p>You are being redirected to <a href="http/privacy-policy-2/">http/privacy-policy-2/</a></p>
 	</body>
 </html>
